fixes alignment for search bar and button

--- a/kalite/distributed/static/css/distributed/khan-lite.css
+++ b/kalite/distributed/static/css/distributed/khan-lite.css
@@ -724,7 +724,6 @@ a.disabled {
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
     position: relative;
-    top: -1px;
     padding: 2px 5px;
     font-size: 12px;
 }
